supplemental: solve IDEA inspections for #9146